[gd_scene load_steps=10 format=3 uid="uid://blj5g47uwo7m0"]

[ext_resource type="Script" uid="uid://c2voik2e2oh0w" path="res://minigames/Energy/scenes/main.gd" id="1_5g6v2"]
[ext_resource type="PackedScene" uid="uid://cr3pl7yfk32tb" path="res://minigames/Energy/scenes/pipe.tscn" id="2_h58j0"]
[ext_resource type="PackedScene" uid="uid://b6xt1pam4caki" path="res://minigames/Energy/scenes/bird.tscn" id="3_4ap2d"]
[ext_resource type="Texture2D" uid="uid://drbqvrdu6kh8s" path="res://minigames/Energy/night_sky.png" id="3_tefeu"]
[ext_resource type="PackedScene" uid="uid://d2ort7tfi33lg" path="res://minigames/Energy/scenes/ground.tscn" id="4_kx1e6"]
[ext_resource type="Texture2D" uid="uid://02arfat8h7s6" path="res://minigames/Energy/assets/Exit button.png" id="6_stdtv"]
[ext_resource type="PackedScene" uid="uid://snrvq7jkapgf" path="res://minigames/Energy/scenes/game_over.tscn" id="6_yk7bg"]

[sub_resource type="FontVariation" id="FontVariation_stdtv"]

[sub_resource type="LabelSettings" id="LabelSettings_7vyra"]
font = SubResource("FontVariation_stdtv")
font_size = 40
outline_size = 20
outline_color = Color(0.9019608, 0.38039216, 0.11372549, 1)

[node name="Main" type="Node"]
script = ExtResource("1_5g6v2")
pipe_scene = ExtResource("2_h58j0")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-401, -162)
scale = Vector2(1.26071, 1.26071)
texture = ExtResource("3_tefeu")
offset = Vector2(432, 384)

[node name="Pet" parent="." instance=ExtResource("3_4ap2d")]

[node name="Ground" parent="." instance=ExtResource("4_kx1e6")]
z_index = 1
position = Vector2(0, 880)

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="GameOver" parent="." instance=ExtResource("6_yk7bg")]

[node name="ExitButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 19.0
offset_right = 1849.0
offset_bottom = 1819.0
scale = Vector2(0.029453347, 0.029453347)
text = "Exit"
icon = ExtResource("6_stdtv")

[node name="ResultLabel" type="Label" parent="."]
offset_left = 379.0
offset_top = 227.0
offset_right = 546.0
offset_bottom = 301.0
text = "Result"
label_settings = SubResource("LabelSettings_7vyra")

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_right = 88.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Energy: 0"

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
